[gd_scene load_steps=19 format=3 uid="uid://dffv0fxympw6i"]

[ext_resource type="Script" uid="uid://i6utlo3lkixu" path="res://GameScenes/MainMenu/main_menu.gd" id="1_heugc"]
[ext_resource type="PackedScene" uid="uid://b8opvrf2ka2hs" path="res://Assets/Sprites/Animation/color_rect.tscn" id="2_1ycsb"]
[ext_resource type="FontFile" uid="uid://u5egi6qa7ntk" path="res://Assets/Sprites/Fonts/Hello Larry.otf" id="3_1ycsb"]
[ext_resource type="Texture2D" uid="uid://o2t7iw2383yc" path="res://Assets/Sprites/Background/Background.png" id="3_8tbwf"]
[ext_resource type="Texture2D" uid="uid://c7pt2fqgv0boh" path="res://Assets/Sprites/Buttons/Buttons!!/Ram Buttons.png" id="3_bcwcm"]
[ext_resource type="Texture2D" uid="uid://db4b5k1a4s1a6" path="res://Assets/Sprites/Buttons/ExitPress.png" id="3_nxlvx"]
[ext_resource type="Texture2D" uid="uid://0oym0t850rgl" path="res://Assets/Sprites/Icon/CakeSprite.png" id="4_8jg3k"]
[ext_resource type="Texture2D" uid="uid://rqeksc0jj05x" path="res://Assets/Sprites/Buttons/Buttons!!/Ram Buttonss.png" id="4_nxlvx"]
[ext_resource type="AudioStream" uid="uid://bgoxdn4dn1wny" path="res://Assets/Music/SoundEffects/Button/button_fx_low_003_cc0_avr.wav" id="5_8tbwf"]
[ext_resource type="Texture2D" uid="uid://cmkpnyfp3oedl" path="res://Assets/Sprites/Icon/CakeSpriteHover.png" id="5_kmc10"]

[sub_resource type="Theme" id="Theme_270ec"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8jg3k"]
atlas = ExtResource("3_bcwcm")
region = Rect2(546.3741, 1.036274, 140.1549, 60.91583)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ycsb"]
atlas = ExtResource("3_bcwcm")
region = Rect2(545.3027, 65.10866, 139.95221, 67.50438)

[sub_resource type="AtlasTexture" id="AtlasTexture_07inp"]
atlas = ExtResource("3_bcwcm")
region = Rect2(291.20932, 80.25052, 63.088898, 62.037415)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tbwf"]
atlas = ExtResource("3_bcwcm")
region = Rect2(354.16522, 81.87727, 62.037415, 62.557358)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcwcm"]
atlas = ExtResource("4_nxlvx")
region = Rect2(289.90765, 79.96807, 63.726135, 63.407524)

[sub_resource type="AtlasTexture" id="AtlasTexture_en4rw"]
atlas = ExtResource("3_bcwcm")
region = Rect2(418.03925, 80.428856, 59.583954, 61.1771)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxlvx"]
atlas = ExtResource("3_bcwcm")
region = Rect2(477.36154, 79.44921, 61.495758, 62.770256)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_heugc")

[node name="BackgroundImage" type="Node2D" parent="."]
position = Vector2(63, -25)

[node name="Sprite2D" type="Sprite2D" parent="BackgroundImage"]
position = Vector2(516, 351)
texture = ExtResource("3_8tbwf")

[node name="Label" type="Label" parent="BackgroundImage"]
offset_left = -19.999996
offset_top = 64.0
offset_right = 782.0
offset_bottom = 185.0
scale = Vector2(0.95185095, 1.40373)
theme = SubResource("Theme_270ec")
theme_override_fonts/font = ExtResource("3_1ycsb")
theme_override_font_sizes/font_size = 130
text = "CAKE MAKER"

[node name="TextureButton" type="TextureButton" parent="BackgroundImage"]
offset_left = 589.0
offset_top = 182.0
offset_right = 1089.0
offset_bottom = 682.0
texture_normal = ExtResource("4_8jg3k")
texture_hover = ExtResource("5_kmc10")

[node name="Buttons_Main" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 17.0
offset_top = 509.0
offset_right = 307.0
offset_bottom = 720.0

[node name="Start" type="TextureButton" parent="Buttons_Main"]
layout_mode = 0
offset_left = 19.0
offset_top = -12.999985
offset_right = 159.0
offset_bottom = 47.000015
scale = Vector2(1.9292322, 2.0131547)
texture_normal = SubResource("AtlasTexture_8jg3k")
texture_hover = SubResource("AtlasTexture_1ycsb")

[node name="MuteBgm" type="TextureButton" parent="Buttons_Main"]
layout_mode = 0
offset_left = 300.0
offset_top = -3.0
offset_right = 363.0
offset_bottom = 59.0
scale = Vector2(1.8556699, 1.6695031)
toggle_mode = true
texture_normal = SubResource("AtlasTexture_07inp")
texture_pressed = SubResource("AtlasTexture_8tbwf")
texture_hover = SubResource("AtlasTexture_bcwcm")

[node name="Quit" type="TextureButton" parent="Buttons_Main"]
layout_mode = 0
offset_left = 430.0
offset_top = -4.0000076
offset_right = 489.0
offset_bottom = 56.999992
scale = Vector2(1.7149135, 1.6517513)
texture_normal = SubResource("AtlasTexture_en4rw")
texture_pressed = ExtResource("3_nxlvx")
texture_hover = SubResource("AtlasTexture_nxlvx")

[node name="Press" type="AudioStreamPlayer2D" parent="Buttons_Main/Quit"]
stream = ExtResource("5_8tbwf")
volume_db = -16.155

[node name="FadeTransition" parent="." instance=ExtResource("2_1ycsb")]
visible = false
offset_left = 43.000004
offset_top = 39.0
offset_right = 43.000004
offset_bottom = 39.0

[node name="FadeTimer" type="Timer" parent="FadeTransition"]
one_shot = true

[connection signal="pressed" from="Buttons_Main/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Buttons_Main/MuteBgm" to="." method="_on_mute_bgm_pressed"]
[connection signal="toggled" from="Buttons_Main/MuteBgm" to="." method="_on_mute_bgm_toggled"]
[connection signal="pressed" from="Buttons_Main/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="FadeTransition/FadeTimer" to="." method="_on_fade_timer_timeout"]
